fix inline-block links wrapping

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -118,6 +118,10 @@ body {
   &--block {
     display: block;
   }
+
+  &--inline-block {
+    display: inline-block;
+  }
 }
 
 .float {
